digitransit-component/packages/digitransit-component-datetimepicker/helpers/styles.scss
@import '~@hsl-fi/sass/colors';
@import '~@hsl-fi/sass/mixins/screen';
@import '~@hsl-fi/sass/mixins/text';

$primary-color: #007ac9;
$font-weight-medium: 500;
@mixin default-focus-outline {
  /* First apply outline that is used in Edge and Firefox */
  outline: 1px dotted #212121;
  /* Then override outline for webkit browsers like Chrome, this has no effect on other browsers */
  outline: 5px auto -webkit-focus-ring-color; /* stylelint-disable-line declaration-block-no-duplicate-properties */
}

$zindex: base, map-container, footer, map-gradient, map-fullscreen-toggle,
  map-buttons, context-panel, search-panel, search-overlay, preferred-input, destination-input,
  viapoint-input-5, viapoint-input-4, viapoint-input-3, viapoint-input-2,
  viapoint-input-1, origin-input, search-input-focus, search-input-icon, autosuggest-suggestion-container, front;

.sr-only:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.dt-datetimepicker {
  border: none;
  padding: 0;
  margin: 0;
  font-size: 15px;
  font-weight: $font-weight-medium;

  button, label {
    font-size: 1em;
    font-weight: inherit;
  }

  label button {
    cursor: pointer;
    font-family: 'Gotham Rounded A', 'Gotham Rounded B', Arial, Georgia, Serif;
  }

  .top-row-container {
    margin: 0 0 0 18px;
    display: flex;
    height: 28px;

    @include max-width(mobile-small) {
      margin-left: 14px;
    }

    .time-icon {
      svg {
        width: 18px;
        height: 19px;
      }
    }
    .dropdown-icon {
      margin-left: 9px;
      position: relative;
      top: 1px;
      svg {
        fill: $primary-color;
        width: 14px;
        height: 10px;
      }
    }
    .close-icon {
      svg {
        fill: $primary-color;
        width: 11px;
        height: 11px;
        transform: rotate(45deg);
        border-radius: 1px;
        path {
          stroke: #007ac9;
          stroke-width: 30;
        }
      }
    }
    label {
      cursor: pointer;
      &.label-open {
        align-items: flex-start;
        display: flex;
      }
    }
    button, label {
      font-size: 1em;
      letter-spacing: -0.5px;
      line-height: 1;
    }
  }
  .textbutton {
    margin-left: 9px;
    margin-top: 1px;
    background: none;
    border: none;
    color: #666666;
    padding: 0;
    @include min-width(tablet)  {
      margin-left: 14px;
    }

    &.active {
      color: $primary-color;
    }
    &:focus {
      @include default-focus-outline;
    }
  }

  .combobox-left {
    margin-right: 3px;
    @include min-width(tablet)  {
      margin-right: 4px;
    }
  }

  .combobox-right {
    margin-left: 3px;
    @include min-width(tablet)  {
      margin-right: 4px;
    }
  }

  .radio-textbutton-label {
    margin: 2px 0 0 13px;
    background: none;
    border: none;
    color: #666666;
    padding: 0;
    cursor: pointer;
    height: min-content;
    &.active {
      color: $primary-color;
    }
    &:focus-within {
      @include default-focus-outline;
    }
    &.first-radio {
      margin: 0;
      display: flex;
      align-items: flex-start;
      .now-text {
        margin: 2px 0 0 14px;
      }

    }
  }

  .radio-textbutton {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
  }
  .open-button {
    display: flex;
    margin-bottom: 0;
  }
  button.close-button {
    width: 44px;
    height: 30px;
    transition: transform 0.2s;
    position: relative;
    top: -2px;
    border: 0;
    font-weight: normal;
    margin: -2px 0 0 0;
    background: none;
    color: $primary-color;
    padding: 0;
    line-height: normal;
    &:focus {
      @include default-focus-outline;
    }
    &:hover {
      transform: scale(1.2);
    }
  }

  .right-edge {
    margin-left: auto;
    margin-right: 0;
    position: relative;
    top: -2px;
  }

  .combobox-container {
    cursor: pointer;
    font-family: 'Gotham Rounded A', 'Gotham Rounded B',Arial, Georgia, Serif;
    border: solid #888888 1px;
    display: flex;
    align-items: center;
    border-radius: 5px;
    height: 50px;
    flex-grow: 1;
    &:focus-within {
      border-color: $primary-color;
    }
    .left-column {
      display: flex;
      flex-direction: column;
      flex-grow: 1;
    }
    input, span {
      cursor: pointer;
    }
  }

  .combobox-label {
    font-weight: 300;
    font-size: 12px;
    line-height: 1.67;
    letter-spacing: -0.48px;
    margin: 2px auto 0 11px;
    color: #666666;
    width: 60px;
  }

  .combobox-icon {
    color: $primary-color;
    border-left: solid #888888 1px;
    height: 35px;

    &.date-input-icon {
      display: flex;
      align-items: center;
      justify-content: center;
      padding: 0;
      flex-shrink: 0;
      width: 43px;
      svg {
        width: 20px;
        height: 18px;
      }
    }

    &.time-input-icon {
      display: flex;
      align-items: center;
      justify-content: center;
      padding: 0;
      flex-shrink: 0;
      width: 43px;
        svg {
        width: 18px;
        height: 19px;
      }
    }
  }

  .container  {
    position: relative;

    .suggestion {
      line-height: 49px;
      height: 50px;
      border-top: 1px solid #dddddd;
      padding: 0 0 0 12px;
      letter-spacing: -0.6px;
      color: #333333;
    }
    .suggestionHighlighted {
      background: #dfe5e8;
    }

    .suggestionsContainerOpen {
      position: absolute;
      z-index: index($zindex, 'autosuggest-suggestion-container');
      max-height: 250px;
      overflow-x: hidden;
      overflow-y: scroll;
      border-radius: 5px;
      box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.06);
      border: 1px rgba(0,0,0,0.1) solid;
      top: 35px;
      width: calc(100% + 43px); // 43px == width of icon next to input
      -ms-overflow-style: none;  /* Internet Explorer 10+ */
      scrollbar-width: none;  /* Firefox */
      &::-webkit-scrollbar {
        display: none;  /* Safari and Chrome */
      }
      ul {
        padding: 0;
        margin: 0;
      }
    }
    .input {
      padding-left: 12px;
      padding-right: 0;
      border: none;
      height: 26px;
      &:focus {
        outline: none;
        border: none;
        background: none;
      }
      background: inherit;
      box-shadow: none;
      font-stretch: normal;
      font-style: normal;
      line-height: 1.33;
      letter-spacing: -0.6px;
      color: #333333;
      font-size: 15px;
      font-weight: 500;
      margin: -6px 0 0 -1px;
      position: relative;
    }
  }

  .picker-container {
    margin: 11px 0 0 0;
    display: flex;
  }

  .combobox-mobile-container {
    flex-grow: 1;
  }
  .mobile-input-display {
    position: absolute;
    margin: -7px 0 0 -1px;
    padding: 26px 0 10px 12px;
    border: none;
    height: 26px;
    &:focus {
      outline: none;
      box-shadow: none;
    }
    background: inherit;
    box-shadow: none;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.33;
    letter-spacing: -0.6px;
    color: #333333;
  }
  .mobile-input-hidden {
    font-size: 16px;
    margin-bottom: 12px;
    height: 0px;
    width: 0;
    background: inherit;
    color: transparent;
    outline: none;
    box-shadow: none;
    border: none;
    &:focus {
      outline: none;
      box-shadow: none;
    }
  }
}

